--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <div class="app">
     <h1>📔 Nhật ký</h1>
 
-    <textarea id="newEntry" placeholder="Viết nhật ký hôm nay..."></textarea>
+    <input id="newTitle" placeholder="Tiêu đề..." />
+    <textarea id="newEntry" placeholder="Nội dung..."></textarea>
+    <input type="date" id="newDate">
     <button onclick="addEntry()">Lưu</button>
 
     <h2>Bài viết</h2>
